Release 2.9.0
=============

New features
------------

- New module :mod:`rpy2.situation` to extract and report informations
  about the environment, such as where is the R HOME, what is the
  version of R, what is the version of R rpy2 was built with, etc...
  The module is also designed to be run directly and provide diagnostics:
  `python -m rpy2.situation`.

Changes
-------

- Starting several times the singleton :class:`EventProcessor` longer results
  in a :class:`RuntimeError`. This is now only a warning, addressing
  issue #182.

- The target version for the R package `dplyr` mapped is now 0.5.0, and
  :func:`rpy2.robjects.lib.dplyr.src_dt` is no longer present (see issue #357)

- :meth:`Environment.keys` is now a iterator to match :meth:`dict.keys`,
  also an interator in Python 3.

Bugs fixed
----------

- :func:`numpy.float128` is not available on all platforms. The unit test
  for it is now skipped on systems where it is not present (issue #347)


Release 2.8.4
=============

Bugs fixed
----------

- The context manager :func:`rpy2.robjects.lib.grdevices.render_to_file`
  is no longer trying to impose a file name generated by :mod:`tempfile`
  (issue #371)


Release 2.8.3
=============

Bugs fixed
----------

- Fixed the error when the transformation of R "man" pages into Python
  docstrings was failing when the section "arguments" was missing
  (issue #368)
  
- Failing to find R in the PATH during the installation of rpy2
  is now printing an error message instead of a warning (issue #366)
  
  
Release 2.8.2
=============

Bugs fixed
----------

- R's `dplyr::src_dt` was moved to `dtdplyr::src_dt` with `dplyr` release 0.5.0.
  To address this, `src_dt` will become a `None` if the R package `dplyr` is
  discovered to be of version >= 0.5.0 at runtime. (issue #357)

- Conversion issue when R symbols were accessed as attribute of the singleton
  :class:`rpy2.robjects.R`. (issue #334)
